# custom-siri

./: .env.example  README.md  main.py  makefile  pyproject.toml  settings.py  voice_siri.py
experiments/: test_model.py
siri_function_calling_dataset/: data-00000-of-00001.arrow
src/dataset/: README.md  check_format.py  clean.py  create_dataset.py  execution_checker.py  prompts.py  tools_description.py  upload_dataset.py  upload_hf_dataset.py  utils.py
src/dataset/generation/: generate_adversial_examples.py  generate_multi_tool_points.py  generate_negative_points.py  generate_single_tool_points.py  paraphrase.py
src/functions/: functions.py
src/siri_function_calling_dataset/: data-00000-of-00001.arrow
